# demo-setuptools-without-setuppy

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
