[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "setuptools-with-pyproject"
version = "0.2"
description = "This is a demo package"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
dependencies = [
    "cowsay"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = ["pytest"]
